<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal">

   <ImageView
        android:layout_height="150dp"
       android:layout_width="150dp"
       android:src="@drawable/icon"
       android:contentDescription="@string/logo"
       android:layout_marginTop="30dp"
       android:layout_marginBottom="30dp"/>
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:text="@string/login"
        android:layout_marginBottom="30dp"/>
 <TextView
     android:textAlignment="center"
     android:layout_width="match_parent"
     android:layout_height="20sp"
     android:textSize="15sp"
     android:id="@+id/tvLoginMessage"
     android:text=""
     android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textAutoComplete"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="30sp" />
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/loginbtn"
        />
    <TextView
        android:id="@+id/tvException"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:text=""
        android:layout_marginTop="30dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>