<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgView"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/future_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filename"
        android:id="@+id/tvImageInfo"
        android:layout_above="@id/btnByFile"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnByFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_as_file"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>